k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architectai-service
  namespace: architectai
  labels:
    app.kubernetes.io/name: architectai-platform
spec:
  type: ClusterIP
  selector:
    app: architectai-platform
  ports:
    - name: http-api
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: http-ui
      port: 8501
      targetPort: 8501
      protocol: TCP
